2003-12-10  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-store.h: Add a CAMEL_FOLDER_NOCHILDREN flag.

	* providers/imap/camel-imap-store.c (get_folders): Same as below.

	* providers/imap/camel-imap-utils.c (imap_parse_list_response):
	s/CAMEL_IMAP_FOLDER_NOCHILDREN/CAMEL_FOLDER_NOCHILDREN/

2003-12-10  Not Zed  <NotZed@Ximian.com>

	* camel-smime-context.c (sm_verify): also check
	application/pkcs7-signature (bloody applemail).
	(camel_smime_context_describe_part): as above, and fix the logic.
	dont think its used anyway.  Bug #51750.

2003-12-10  Not Zed  <NotZed@Ximian.com>

	* Makefile.am (libcamel_la_SOURCES): put the
	camel-smime-context.[ch] back in here, remove it from EXTRA_DIST,
	and make it compile optinally the same way camel-tcp-stream-ssl.c
	does (#ifdef ...).

	* camel-smime-context.c (sm_verify_cmsg): add signer info to
	certvalidity.

	* camel-cipher-context.c (CamelCipherValidity): Added certinfo to
	validity for signing and encrypting, so we can find the keys later
	for a gui.
	(camel_cipher_validity_add_certinfo): add signer or
	encrypter info to the validity.
	(camel_cipher_validity_envelope): add sign/encrypt keys.

2003-12-10  Not Zed  <NotZed@Ximian.com>

	* camel-stream-process.c (do_exec_command): remove dthe clearenv
	stuff, not sure why its there.  s/setenv/putenv/ for portability.
	See Bug #51767.

2003-12-08  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (header_decode_rfc2184_param): Revert the
	s/is_/camel_mime_is_/ changes or we get really long variable
	names.
	(header_decode_param): Same.
	(header_decode_param_list): Here too.

2003-12-09  Not Zed  <NotZed@Ximian.com>

	** See bug #51899.

	* providers/imap/camel-imap-store.c (get_folders): add the first
	fi to the info's hash, so we dont duplicate it if we come across
	it again (which we generally will).

2003-12-09  Not Zed  <NotZed@Ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_send_to): encode the